--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/.classpath:/resources/assets/js/,classpath:/resources/assets/css/,classpath:/static/,classpath:/public/
+
+#server.session.timeout = 36000
